syntax = "proto3";

package api.videoApi.service.v1;

option go_package = "lehu-video/api/videoApi/service/v1;v1";
option java_multiple_files = true;
option java_package = "api.videoApi.service.v1";

message PageStatsReq{
	int32 page = 1;
	int32 size = 2;
	string sort = 3;
}

message PageStatsResp{
	int32 total = 1;
}